fix: file info widget icon colors and activity heatmap spacing adjustments

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -265,9 +265,9 @@ nav#nav-sidebar header h4 {
 #dashboard #widget-activity-heatmap .table {
   table-layout: fixed;
   width: 100%;
-  font-size: 0.5rem;
+  font-size: 0.45rem;
   border-collapse: separate;
-  border-spacing: 4px;
+  border-spacing: 5.5px;
 }
 #dashboard #widget-activity-heatmap .table th.day-label,
 #dashboard #widget-activity-heatmap .table td.day-label {
@@ -453,33 +453,32 @@ nav#nav-sidebar header h4 {
 }
 @media (min-width: 576px) {
   #dashboard #widget-activity-heatmap .table {
-    border-spacing: 6px;
+    font-size: 0.45rem;
+    border-spacing: 3px;
   }
 }
 
 @media (min-width: 768px) {
   #dashboard #widget-activity-heatmap .table {
-    border-spacing: 8px;
+    border-spacing: 4px;
   }
 }
 
 @media (min-width: 992px) {
   #dashboard #widget-activity-heatmap .table {
-    font-size: 0.7rem;
-    border-spacing: 10px;
+    border-spacing: 5px;
   }
 }
 
 @media (min-width: 1200px) {
   #dashboard #widget-activity-heatmap .table {
-    font-size: 0.8rem;
-    border-spacing: 12px;
+    font-size: 0.7rem;
+    border-spacing: 8px;
   }
 }
 
 @media (min-width: 1400px) {
   #dashboard #widget-activity-heatmap .table {
-    font-size: 0.9rem;
   }
 }
 
